[wip] Iliev-5/6 -- Added Maps and Lineouts to the notebooks Added parameter files for Iliev-6

--- a/tests/Iliev-5/Iliev-5.ipynb
+++ b/tests/Iliev-5/Iliev-5.ipynb
@@ -10,7 +10,8 @@
     "* [Packages & Settings](#packages)\n",
     "* [Snapshots](#snapshots)\n",
     "* [Loading Snapshots](#loading)\n",
-    "* [HI maps](#HI-maps)\n",
+    "* [Maps](#maps)\n",
+    "* [Lineouts](#lineouts)\n",
     "* [I-front position](#pos-vel)"
    ]
   },
@@ -49,7 +50,9 @@
     "import plotly.express as px\n",
     "import plotly.io as pio\n",
     "from plotly.subplots import make_subplots\n",
-    "pio.templates.default = \"simple_white\""
+    "pio.templates.default = \"simple_white\"\n",
+    "\n",
+    "from math import pi"
    ]
   },
   {
@@ -280,16 +283,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maps <a class=\"anchor\" id=\"maps\"></a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add sections\n",
-    "\n",
-    "def plot_maps(x, y, RA, RB, heatmaps, zmin, zmax, attr_title):\n",
-    "    # RA, RB, C2Ray, Enzo, Flash, Hart, Licorice, Rsph, Rh1d, Zeus\n",
-    "    fig = fig = make_subplots(\n",
+    "def plot_maps(x, y, heatmaps):\n",
+    "    titles = {\n",
+    "        'Rhyme_CaseA': {'name': 'Rhyme (Case A)', 'num': 0},\n",
+    "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
+    "        'Enzo': {'name': 'Enzo', 'num': 2},\n",
+    "        'Flash': {'name': 'Flash', 'num': 3},\n",
+    "        'HART': {'name': 'HART', 'num': 4},\n",
+    "        'Rhyme_CaseB': {'name': 'Rhyme (Case B)', 'num': 5},\n",
+    "        'LICORICE': {'name': 'Licorice', 'num': 6},\n",
+    "        'RSPH': {'name': 'RSPH', 'num': 7},\n",
+    "        'RH1D': {'name': 'RH1D', 'num': 8},\n",
+    "        'ZEUS-MP': {'name': \"Zeus-MP\", 'num': 9}\n",
+    "    }\n",
+    "    \n",
+    "    fig = make_subplots(\n",
     "        4, 4,\n",
     "        column_widths=[1] * 4, row_heights=[1] * 4,\n",
     "        specs=[\n",
@@ -306,55 +326,92 @@
     "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
     "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
     "    \n",
-    "    if RA is not None:\n",
-    "        fig.add_trace(go.Heatmap(\n",
-    "            x=x, y=y, z=RA, name=\"Rhyme (Case A)\",\n",
-    "            zauto=False, zmin=zmin, zmax=zmax,\n",
-    "            colorbar=dict(\n",
-    "                title=attr_title, titleside='bottom', titlefont=dict(size=18),\n",
-    "                thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
-    "            ),\n",
-    "            colorscale='Spectral', showscale=True,\n",
-    "        ), 1, 1)\n",
-    "        \n",
-    "        fig.update_xaxes(row=1, col=1, mirror=True, showticklabels=False,)\n",
-    "        fig.update_yaxes(\n",
-    "            row=1, col=1, mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "            tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "        )\n",
-    "        \n",
-    "    if RB is not None:\n",
-    "        fig.add_trace(go.Heatmap(\n",
-    "            x=x, y=y, z=RA, name=\"Rhyme (Case B)\", zauto=False, zmin=zmin, zmax=zmax,\n",
-    "            colorscale='Spectral', showscale=False,\n",
-    "        ), 3, 1)\n",
-    "        \n",
-    "        fig.update_xaxes(\n",
-    "            row=3, col=1, mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "            tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "        )\n",
-    "        fig.update_yaxes(\n",
-    "            row=3, col=1, mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "            tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
-    "        )\n",
-    "        \n",
-    "    for name, heatmap in heatmaps.items():\n",
-    "        fig.add_trace(go.Heatmap(\n",
-    "            x=x, y=y, z=heatmap, name=name, zauto=False, zmin=zmin, zmax=zmax,\n",
-    "            colorscale='Spectral', showscale=False,\n",
-    "        ), BINARIES[name]['row'], BINARIES[name]['col'])\n",
-    "        \n",
-    "        if BINARIES[name]['row'] == 4:\n",
-    "            fig.update_xaxes(\n",
-    "                row=BINARIES[name]['row'], col=BINARIES[name]['col'],\n",
-    "                mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
-    "                tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "    attrs = ['nH', 'p', 'T', 'fHI']\n",
+    "    attrs = ['p', 'T', 'fHI']\n",
+    "    attr_titles = {'nH': 'log(n<sub>H</sub>)', 'p': 'log(p)', 'T': 'log(T)', 'fHI': 'log(f<sub>HI</sub>)'}\n",
+    "    attr_cs = {'nH': 'Spectral', 'p': 'Viridis', 'T': 'Inferno', 'fHI': 'Spectral'}\n",
+    "    attr_cs_rng = {'nH': [-4, -2], 'p': [-17, -14.5], 'T': [2, 4.5], 'fHI': [-6, 0]}\n",
+    "    n_slices = len(attrs)\n",
+    "    \n",
+    "    zmin, zmax = {}, {}\n",
+    "    for attr in attrs:\n",
+    "        zmin[attr] = np.min([np.min(xy) for sn in heatmaps.keys() for xy in heatmaps[sn][attr]])\n",
+    "        zmax[attr] = np.max([np.max(xy) for sn in heatmaps.keys() for xy in heatmaps[sn][attr]])\n",
+    "    \n",
+    "    for sn, h in heatmaps.items():\n",
+    "        si = titles[sn]['num']\n",
+    "        for slc, attr in enumerate(attrs):\n",
+    "            d1, d2 = slc * pi / 2 / n_slices, (slc + 1) * pi / 2 / n_slices\n",
+    "            \n",
+    "            xy = h[attr]\n",
+    "            \n",
+    "            for i in range(xy.shape[0]):\n",
+    "                for j in range(xy.shape[1]):\n",
+    "                    d = np.arctan2(j + 0.5, i + 0.5)\n",
+    "                    if not (d1 <= d <= d2):\n",
+    "                        xy[i][j] = None\n",
+    "                        \n",
+    "            fig.add_trace(go.Heatmap(\n",
+    "                x=x, y=y, z=xy, name=f\"{sn}: {attr}\",\n",
+    "                zauto=False, zmin=attr_cs_rng[attr][0], zmax=attr_cs_rng[attr][1],\n",
+    "                colorbar=dict(\n",
+    "                    title=attr_titles[attr], titleside='bottom', titlefont=dict(size=18),\n",
+    "                    thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
+    "                    x=1.02, y=slc/n_slices, len=1/n_slices, xanchor='left', yanchor='bottom',\n",
+    "                ),\n",
+    "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme_CaseA' else False,\n",
+    "            ), h['row'], h['col'])\n",
+    "            \n",
+    "            if h['row'] == 4 or sn == 'Rhyme_CaseB':\n",
+    "                fig.update_xaxes(\n",
+    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "                )\n",
+    "            else:\n",
+    "                fig.update_xaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False,)\n",
+    "            \n",
+    "            if h['col'] == 1:\n",
+    "                fig.update_yaxes(\n",
+    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "                )\n",
+    "            else:\n",
+    "                fig.update_yaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False,)\n",
+    "                \n",
+    "            l = 15 + 8.0/128\n",
+    "            if d2 <= pi / 4:\n",
+    "                xend = l\n",
+    "                yend = l * np.tan(d2)\n",
+    "                xannot = .9 * l * np.sin((d1 + d2)/2)\n",
+    "                yannot = .9 * l * np.cos((d1 + d2)/2)\n",
+    "            else:\n",
+    "                xend = l * np.tan(pi/2 - d2)\n",
+    "                yend = l\n",
+    "                xannot = .9 * l * np.cos(pi/2 - (d1+d2)/2)\n",
+    "                yannot = .9 * l * np.sin(pi/2 - (d1+d2)/2)\n",
+    "                \n",
+    "            if d2 < pi / 2:\n",
+    "                fig.add_shape(\n",
+    "                    type='line', xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
+    "                    x0=0, y0=0, x1=xend, y1=yend,\n",
+    "                    line=dict(color=\"white\", width=4 if h['col'] == 1 else 2.5), opacity=1.0,\n",
+    "                )\n",
+    "            \n",
+    "            textangle = 90 / (2 * n_slices) * (2 * slc + 1)\n",
+    "            fig.add_annotation(\n",
+    "                x=xannot, y=yannot, xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
+    "                text=attr_titles[attr], showarrow=False,\n",
+    "                font=dict(color='white', size=24 if h['col'] == 1 else 16), textangle=textangle,\n",
     "            )\n",
-    "        else:\n",
-    "            fig.update_xaxes(row=BINARIES[name]['row'], col=BINARIES[name]['col'], mirror=True, showticklabels=False,)\n",
-    "        \n",
-    "        fig.update_yaxes(row=BINARIES[name]['row'], col=BINARIES[name]['col'], mirror=True, showticklabels=False,)\n",
-    "        \n",
+    "            \n",
+    "        fig.add_annotation(\n",
+    "            x=14, y=0.25, xanchor='right', yanchor='bottom',\n",
+    "            xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
+    "            text=titles[sn]['name'], showarrow=False,\n",
+    "            font=dict(color='white', size=22 if h['col'] == 1 else 14), \n",
+    "        )\n",
+    "            \n",
+    "\n",
     "    width, height = 1100, 1000\n",
     "    \n",
     "    fig.update_layout(\n",
@@ -366,16 +423,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## HI maps <a class=\"anchor\" id=\"HI-maps\"></a>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "def fHI_maps(t=200):\n",
@@ -385,26 +437,111 @@
     "    \n",
     "    heatmaps = {}\n",
     "    \n",
-    "    for sn, sim in DATA[t].items():\n",
-    "        if sn in ['Rhyme_CaseA', 'Rhyme_CaseB']:\n",
-    "            continue\n",
-    "        \n",
-    "        heatmaps[sn] = np.log10(sim['nHI'][:, :, 0] / (sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0]))\n",
-    "        \n",
-    "    RA = np.log10(DATA[t]['Rhyme_CaseA']['nHI'][:, :, 0] / (DATA[t]['Rhyme_CaseA']['nHI'][:, :, 0] + DATA[t]['Rhyme_CaseA']['nHII'][:, :, 0]))\n",
-    "    RB = np.log10(DATA[t]['Rhyme_CaseB']['nHI'][:, :, 0] / (DATA[t]['Rhyme_CaseB']['nHI'][:, :, 0] + DATA[t]['Rhyme_CaseB']['nHII'][:, :, 0]))\n",
+    "    for sn, sim in DATA[t].items():  \n",
+    "        heatmaps[sn] = {}\n",
+    "        if sn == 'Rhyme_CaseA':\n",
+    "            heatmaps[sn]['row'] = 1\n",
+    "            heatmaps[sn]['col'] = 1\n",
+    "        elif sn == 'Rhyme_CaseB':\n",
+    "            heatmaps[sn]['row'] = 3\n",
+    "            heatmaps[sn]['col'] = 1\n",
+    "        else:\n",
+    "            heatmaps[sn]['row'] = BINARIES[sn]['row']\n",
+    "            heatmaps[sn]['col'] = BINARIES[sn]['col']\n",
     "\n",
-    "    zmin = np.min(RA)\n",
-    "    zmax = np.max(RA)\n",
+    "        heatmaps[sn]['nH'] = np.log10(sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0])\n",
+    "        heatmaps[sn]['p'] = np.log10(sim['p'][:, :, 0])\n",
+    "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, 0])\n",
+    "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, 0] / (sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0]))\n",
     "    \n",
     "    x = np.linspace(0, 15, 128)\n",
     "        \n",
-    "    fig = plot_maps(x, x, RA, RB, heatmaps, zmin, zmax, 'fHI')\n",
+    "    fig = plot_maps(x, x, heatmaps)\n",
     "    \n",
     "    fig.show()\n",
     "\n",
     "if __name__ == '__main__' and '__file__' not in globals():\n",
     "    fHI_maps(t=500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lineouts <a class=\"anchor\" id=\"lineouts\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_lineouts(ts, attr, title):\n",
+    "    colors = px.colors.qualitative.G10 # Pastel\n",
+    "    \n",
+    "    len_t = len(ts)\n",
+    "    \n",
+    "    fig = make_subplots(\n",
+    "        1, len_t,\n",
+    "        column_widths=[1] * len_t, row_heights=[1],\n",
+    "        vertical_spacing=0.025, horizontal_spacing=0.025,\n",
+    "        shared_xaxes=False, shared_yaxes=True,\n",
+    "        x_title='x / L<sub>box</sub>', y_title=title,\n",
+    "        subplot_titles=[f\"t = {t} Myr\" for t in ts],\n",
+    "    )\n",
+    "    \n",
+    "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
+    "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
+    "    \n",
+    "    for i in range(2, 2+len_t):\n",
+    "        fig.layout.annotations[i][\"font\"] = dict(size=18, color='black')\n",
+    "    \n",
+    "    for i, t in enumerate(ts):\n",
+    "        for si, (sn, sim) in enumerate(DATA[t].items()):\n",
+    "            x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
+    "            \n",
+    "            if attr == 'fHI':\n",
+    "                y = np.log10(sim['nHI'][:, 0, 0] / (sim['nHI'][:, 0, 0] + sim['nHII'][:, 0, 0]))\n",
+    "            else:\n",
+    "                y = np.log10(sim[attr][:, 0, 0])\n",
+    "                \n",
+    "            fig.add_trace(go.Scatter(\n",
+    "                x=x, y=y, name=f\"{sn}\", mode='lines',\n",
+    "                line=dict(color=colors[si], width=1.5),\n",
+    "                showlegend=True if i == 0 else False,\n",
+    "            ), 1, i+1)\n",
+    "            \n",
+    "            fig.update_xaxes(\n",
+    "                row=1, col=i+1, type='linear', mirror=True,\n",
+    "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                tickmode='array', tickvals=[0, 0.5, 1], ticktext=['0', '.5', '1'],\n",
+    "            )\n",
+    "            \n",
+    "            tickvals = list(range(-40, 20, 2))\n",
+    "            ticktext = [f\"10<sup>{x}</sup>\" for x in tickvals]\n",
+    "            \n",
+    "            fig.update_yaxes(\n",
+    "                row=1, col=i+1, mirror=True,\n",
+    "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                tickmode='array', tickvals=tickvals, ticktext=ticktext,\n",
+    "                showticklabels=True if i == 0 else False,\n",
+    "            )\n",
+    "            \n",
+    "    width = 500 if len_t <= 2 else 1000\n",
+    "    height = width / len_t + 50\n",
+    "    \n",
+    "    fig.update_layout(\n",
+    "        width=width, height=height,\n",
+    "        margin=dict(t=60, r=60, b=60, l=80),\n",
+    "    )\n",
+    "    \n",
+    "    fig.show()\n",
+    "\n",
+    "if __name__ == '__main__' and '__file__' not in globals():\n",
+    "    plot_lineouts([10, 100, 200, 500], 'p', 'p [g / m s<sup>2</sup>]')\n",
+    "    plot_lineouts([10, 100, 200, 500], 'T', 'T [K]')\n",
+    "    plot_lineouts([10, 100, 200, 500], 'fHI', 'f<sub>HI</sub>')"
    ]
   },
   {
@@ -447,7 +584,7 @@
     "            nHII_prof = np.einsum('iii->i', sim['nHII'])\n",
     "            fHI_prof = nHII_prof / (nHI_prof + nHII_prof)\n",
     "\n",
-    "            pos = i_front_get_position(xs, fHI_prof)\n",
+    "            pos = i_front_get_position(xs, fHI_prof)['0', '.5', '1']\n",
     "            \n",
     "            if len(pos) == 1:\n",
     "                sim['I-front']['pos_kpc'] = pos[0][0]\n",
