--- a/tests/Iliev-6/Iliev-6.ipynb
+++ b/tests/Iliev-6/Iliev-6.ipynb
@@ -10,7 +10,8 @@
     "* [Packages & Settings](#packages)\n",
     "* [Snapshots](#snapshots)\n",
     "* [Loading Snapshots](#loading)\n",
-    "* [HI maps](#HI-maps)\n",
+    "* [Maps](#maps)\n",
+    "* [Lineouts](#lineouts)\n",
     "* [I-front position](#pos-vel)"
    ]
   },
@@ -49,7 +50,9 @@
     "import plotly.express as px\n",
     "import plotly.io as pio\n",
     "from plotly.subplots import make_subplots\n",
-    "pio.templates.default = \"simple_white\""
+    "pio.templates.default = \"simple_white\"\n",
+    "\n",
+    "from math import pi"
    ]
   },
   {
@@ -79,45 +82,54 @@
     "\n",
     "BINARIES = {\n",
     "    'CAPREOLE+C2-RAY': {\n",
+    "        'row': 1, 'col':3,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/c2ray{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/c2ray_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'Flash': {\n",
+    "#         'row':1, 'col 'c': 4,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/flash{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/flash_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'HART': {\n",
+    "        'row': 2, 'col': 3,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/hart{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/hart_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'LICORICE': {\n",
+    "#         'row': 2, 'col': 4,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/licorice{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/licorice_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "    'RSPH': {\n",
+    "        'row': 3, 'col': 3,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rsph{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rsph_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "    'RH1D': {\n",
+    "        'row': 3, 'col': 4,\n",
     "        'orig': {t: {'path': f\"{ILIEV_5_DIR}/rh1d{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "        'add': {t: {'path': f\"{ILIEV_5_DIR}/rh1d_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "    },\n",
     "#     'ZEUS-MP': {\n",
+    "#         'row': 4, 'col': 3,\n",
     "#         'orig': {t: {'path': f\"{ILIEV_5_DIR}/zeus{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#         'add': {t: {'path': f\"{ILIEV_5_DIR}/zeus_add{i+1}.bin\"} for i, t in enumerate(TIMES)},\n",
     "#     },\n",
     "}\n",
     "\n",
     "Rhyme_CaseA = {\n",
-    "    0: {'path': f'./Iliev-6-CaseA-PowerLaw/Iliev-6-CaseA-000000.chombo.h5', },\n",
+    "    0: {'path': f'./Iliev-6-CaseA-1000/Iliev-6-CaseA-000000.chombo.h5', },\n",
     "}\n",
     "\n",
     "Rhyme_CaseB = {\n",
-    "    0: {'path': f'./Iliev-6-CaseB-PowerLaw/Iliev-6-CaseB-000000.chombo.h5', },\n",
+    "    0: {'path': f'./Iliev-6-CaseB-1000/Iliev-6-CaseB-000000.chombo.h5', },\n",
     "}\n",
     "\n",
     "# Check if files exist\n",
     "def check_if_exist(path):\n",
+    "    \n",
+    "    \n",
     "    if not Path(snap['path']).is_file():\n",
     "        print(f\"Not found: {snap['path']}\")\n",
     "        \n",
@@ -269,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HI maps <a class=\"anchor\" id=\"HI-maps\"></a>"
+    "## Maps <a class=\"anchor\" id=\"maps\"></a>"
    ]
   },
   {
@@ -278,13 +290,249 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def HI_maps(t=100):\n",
+    "def plot_maps(x, y, heatmaps):\n",
+    "    titles = {\n",
+    "        'Rhyme_CaseA': {'name': 'Rhyme (Case A)', 'num': 0},\n",
+    "        'CAPREOLE+C2-RAY': {'name': 'C2Ray', 'num': 1},\n",
+    "        'Flash': {'name': 'Flash', 'num': 2},\n",
+    "        'HART': {'name': 'HART', 'num': 3},\n",
+    "        'LICORICE': {'name': 'Licorice', 'num': 4},\n",
+    "        'Rhyme_CaseB': {'name': 'Rhyme (Case B)', 'num': 5},\n",
+    "        'RSPH': {'name': 'RSPH', 'num': 6},\n",
+    "        'RH1D': {'name': 'RH1D', 'num': 7},\n",
+    "        'ZEUS-MP': {'name': \"Zeus-MP\", 'num': 8}\n",
+    "    }\n",
+    "    \n",
+    "    fig = fig = make_subplots(\n",
+    "        4, 4,\n",
+    "        column_widths=[1] * 4, row_heights=[1] * 4,\n",
+    "        specs=[\n",
+    "            [{\"type\": \"heatmap\", \"rowspan\": 2, \"colspan\": 2}, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
+    "            [None, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
+    "            [{\"type\": \"heatmap\", \"rowspan\": 2, \"colspan\": 2}, None, {\"type\": \"heatmap\"}, {\"type\": \"heatmap\"}],\n",
+    "            [None, None, {\"type\": \"heatmap\"}, None],\n",
+    "        ],\n",
+    "        vertical_spacing=0.025, horizontal_spacing=0.025,\n",
+    "        shared_xaxes=True, shared_yaxes=True,\n",
+    "        x_title='x [px]', y_title='y [px]',\n",
+    "    )\n",
+    "    \n",
+    "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
+    "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
+    "    \n",
+    "    attrs = ['nH', 'p', 'T', 'fHI']\n",
+    "    attr_titles = {'nH': 'n<sub>H</sub>', 'p': 'p', 'T': 'T', 'fHI': 'f<sub>HI</sub>'}\n",
+    "    attr_cs = {'nH': 'Spectral', 'p': 'Viridis', 'T': 'Inferno', 'fHI': 'Spectral'}\n",
+    "    attr_cs_rng = {'nH': [-2, 1], 'p': [-17, -14.5], 'T': [2, 4.5], 'fHI': [-4, 0]}\n",
+    "    n_slices = len(attrs)\n",
+    "    \n",
+    "    zmin, zmax = {}, {}\n",
+    "    for attr in attrs:\n",
+    "        zmin[attr] = np.min([np.min(xy) for sn in heatmaps.keys() for xy in heatmaps[sn][attr]])\n",
+    "        zmax[attr] = np.max([np.max(xy) for sn in heatmaps.keys() for xy in heatmaps[sn][attr]])\n",
+    "    \n",
+    "    for sn, h in heatmaps.items():\n",
+    "        si = titles[sn]['num']\n",
+    "        for slc, attr in enumerate(attrs):\n",
+    "            d1, d2 = slc * pi / 2 / n_slices, (slc + 1) * pi / 2 / n_slices\n",
+    "            \n",
+    "            xy = h[attr]\n",
+    "            \n",
+    "            for i in range(xy.shape[0]):\n",
+    "                for j in range(xy.shape[1]):\n",
+    "                    d = np.arctan2(j + 0.5, i + 0.5)\n",
+    "                    if not (d1 <= d <= d2):\n",
+    "                        xy[i][j] = None\n",
+    "                        \n",
+    "            fig.add_trace(go.Heatmap(\n",
+    "                x=x, y=y, z=xy, name=f\"{sn}: {attr}\",\n",
+    "                zauto=False, zmin=attr_cs_rng[attr][0], zmax=attr_cs_rng[attr][1],\n",
+    "                colorbar=dict(\n",
+    "                    title=attr_titles[attr], titleside='bottom', titlefont=dict(size=18),\n",
+    "                    thicknessmode='pixels', thickness=10, tickfont=dict(size=18),\n",
+    "                    x=1.02, y=slc/n_slices, len=1/n_slices, xanchor='left', yanchor='bottom',\n",
+    "                ),\n",
+    "                colorscale=attr_cs[attr], showscale=True if sn == 'Rhyme_CaseA' else False,\n",
+    "            ), h['row'], h['col'])\n",
+    "            \n",
+    "            if h['row'] == 4 or sn == 'Rhyme_CaseB':\n",
+    "                fig.update_xaxes(\n",
+    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "                )\n",
+    "            else:\n",
+    "                fig.update_xaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False,)\n",
+    "            \n",
+    "            if h['col'] == 1:\n",
+    "                fig.update_yaxes(\n",
+    "                    row=h['row'], col=['col'], mirror=True, titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                    tickmode='array', tickvals=[0, 5, 10, 15], ticktext=['0', '5', '10', '15'],\n",
+    "                )\n",
+    "            else:\n",
+    "                fig.update_yaxes(row=h['row'], col=h['col'], mirror=True, showticklabels=False,)\n",
+    "                \n",
+    "            l = 15 + 8.0/128\n",
+    "            if d2 <= pi / 4:\n",
+    "                xend = l\n",
+    "                yend = l * np.tan(d2)\n",
+    "                xannot = .9 * l * np.sin((d1 + d2)/2)\n",
+    "                yannot = .9 * l * np.cos((d1 + d2)/2)\n",
+    "            else:\n",
+    "                xend = l * np.tan(pi/2 - d2)\n",
+    "                yend = l\n",
+    "                xannot = .9 * l * np.cos(pi/2 - (d1+d2)/2)\n",
+    "                yannot = .9 * l * np.sin(pi/2 - (d1+d2)/2)\n",
+    "                \n",
+    "            if d2 < pi / 2:\n",
+    "                fig.add_shape(\n",
+    "                    type='line', xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
+    "                    x0=0, y0=0, x1=xend, y1=yend,\n",
+    "                    line=dict(color=\"black\", width=4 if h['col'] == 1 else 2.5), opacity=1.0,\n",
+    "                )\n",
+    "            \n",
+    "            textangle = 90 / (2 * n_slices) * (2 * slc + 1)\n",
+    "            fig.add_annotation(\n",
+    "                x=xannot, y=yannot, xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
+    "                text=attr_titles[attr], showarrow=False,\n",
+    "                font=dict(color='black', size=24 if h['col'] == 1 else 16), textangle=textangle,\n",
+    "            )\n",
+    "            \n",
+    "        fig.add_annotation(\n",
+    "            x=14, y=0.25, xanchor='right', yanchor='bottom',\n",
+    "            xref='x' if si == 0 else f\"x{si+1}\", yref='y' if si == 0 else f\"y{si+1}\",\n",
+    "            text=titles[sn]['name'], showarrow=False,\n",
+    "            font=dict(color='black', size=22 if h['col'] == 1 else 14), \n",
+    "        )\n",
+    "            \n",
+    "\n",
+    "    width, height = 1100, 1000\n",
+    "    \n",
+    "    fig.update_layout(\n",
+    "        width=width, height=height,\n",
+    "        margin=dict(b=60, t=10, l=60, r=60),\n",
+    "    )\n",
+    "        \n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fHI_maps(t=75):\n",
     "    if t not in DATA.keys():\n",
     "        print(f\"Don't have a snapshot at t = {t} Myr\")\n",
     "        return\n",
-    "    for sn, sim in DATA[t]:\n",
-    "        pass\n",
-    "        "
+    "    \n",
+    "    heatmaps = {}\n",
+    "    \n",
+    "    for sn, sim in DATA[t].items():  \n",
+    "        heatmaps[sn] = {}\n",
+    "        if sn == 'Rhyme_CaseA':\n",
+    "            heatmaps[sn]['row'] = 1\n",
+    "            heatmaps[sn]['col'] = 1\n",
+    "        elif sn == 'Rhyme_CaseB':\n",
+    "            heatmaps[sn]['row'] = 3\n",
+    "            heatmaps[sn]['col'] = 1\n",
+    "        else:\n",
+    "            heatmaps[sn]['row'] = BINARIES[sn]['row']\n",
+    "            heatmaps[sn]['col'] = BINARIES[sn]['col']\n",
+    "\n",
+    "        heatmaps[sn]['nH'] = np.log10(sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0])\n",
+    "        heatmaps[sn]['p'] = np.log10(sim['p'][:, :, 0])\n",
+    "        heatmaps[sn]['T'] = np.log10(sim['T'][:, :, 0])\n",
+    "        heatmaps[sn]['fHI'] = np.log10(sim['nHI'][:, :, 0] / (sim['nHI'][:, :, 0] + sim['nHII'][:, :, 0]))\n",
+    "    \n",
+    "    x = np.linspace(0, 15, 128)\n",
+    "        \n",
+    "    fig = plot_maps(x, x, heatmaps)\n",
+    "    \n",
+    "    fig.show()\n",
+    "\n",
+    "if __name__ == '__main__' and '__file__' not in globals():\n",
+    "    fHI_maps(t=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lineouts <a class=\"anchor\" id=\"lineouts\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_lineouts(ts, attr, title):\n",
+    "    colors = px.colors.qualitative.G10\n",
+    "    \n",
+    "    len_t = len(ts)\n",
+    "    \n",
+    "    fig = make_subplots(\n",
+    "        1, len_t,\n",
+    "        column_widths=[1] * len_t, row_heights=[1],\n",
+    "        vertical_spacing=0.025, horizontal_spacing=0.025,\n",
+    "        shared_xaxes=False, shared_yaxes=True,\n",
+    "        x_title='x / L<sub>box</sub>', y_title=title,\n",
+    "        subplot_titles=[f\"t = {t} Myr\" for t in ts],\n",
+    "    )\n",
+    "    \n",
+    "    fig.layout.annotations[0][\"font\"] = dict(size=18, color='black')\n",
+    "    fig.layout.annotations[1][\"font\"] = dict(size=18, color='black')\n",
+    "    \n",
+    "    for i in range(2, 2+len_t):\n",
+    "        fig.layout.annotations[i][\"font\"] = dict(size=18, color='black')\n",
+    "    \n",
+    "    for i, t in enumerate(ts):\n",
+    "        for si, (sn, sim) in enumerate(DATA[t].items()):\n",
+    "            x = np.linspace(0, 1, len(sim['nHI'][:, 0, 0]))\n",
+    "            \n",
+    "            if attr == 'fHI':\n",
+    "                y = np.log10(sim['nHI'][:, 0, 0] / (sim['nHI'][:, 0, 0] + sim['nHII'][:, 0, 0]))\n",
+    "            else:\n",
+    "                y = np.log10(sim[attr][:, 0, 0])\n",
+    "                \n",
+    "            fig.add_trace(go.Scatter(\n",
+    "                x=x, y=y, name=f\"{sn}\", mode='lines',\n",
+    "                line=dict(color=colors[si], width=1.5),\n",
+    "                showlegend=True if i == 0 else False,\n",
+    "            ), 1, i+1)\n",
+    "            \n",
+    "            fig.update_xaxes(\n",
+    "                row=1, col=i+1, type='linear', mirror=True,\n",
+    "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                tickmode='array', tickvals=[0, 0.5, 1], ticktext=['0', '.5', '1'],\n",
+    "            )\n",
+    "            \n",
+    "            tickvals = list(range(-40, 20, 2))\n",
+    "            ticktext = [f\"10<sup>{x}</sup>\" for x in tickvals]\n",
+    "            \n",
+    "            fig.update_yaxes(\n",
+    "                row=1, col=i+1, mirror=True,\n",
+    "                titlefont=dict(size=18), tickfont=dict(size=14),\n",
+    "                tickmode='array', tickvals=tickvals, ticktext=ticktext,\n",
+    "                showticklabels=True if i == 0 else False,\n",
+    "            )\n",
+    "            \n",
+    "    width = 500 if len_t <= 2 else 1000\n",
+    "    height = width / len_t + 50\n",
+    "    \n",
+    "    fig.update_layout(\n",
+    "        width=width, height=height,\n",
+    "        margin=dict(t=60, r=60, b=60, l=80),\n",
+    "    )\n",
+    "    \n",
+    "    fig.show()\n",
+    "\n",
+    "if __name__ == '__main__' and '__file__' not in globals():\n",
+    "    plot_lineouts([1, 10, 25, 75], 'p', 'p [g / m s<sup>2</sup>]')\n",
+    "    plot_lineouts([1, 10, 25, 75], 'T', 'T [K]')\n",
+    "    plot_lineouts([1, 10, 25, 75], 'fHI', 'f<sub>HI</sub>')"
    ]
   },
   {
